--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,4 +26,4 @@ jobs:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: asdf-vm/actions/plugin-test@v2.1.0
         with:
-          command: 'gatling --version'
+          command: 'gatling.sh --help'
